# enet-example

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
cmake/: FindENet.cmake  FindEpoxy.cmake  FindGLM.cmake  FindSDL2.cmake
include/: Common.h  Log.h
include/enet/: ENetClient.h  ENetServer.h
include/game/: Camera.h  Common.h  Environment.h  Frame.h  Game.h  Idle.h  Image.h  InputType.h  MoveDirection.h  MoveTo.h  Player.h  State.h  StateMachine.h  StateType.h  Terrain.h
include/geometry/: Cube.h  Geometry.h  Intersection.h  Octree.h  Sphere.h  Triangle.h
include/gl/: ElementArrayBufferObject.h  GLCommon.h  GLInfo.h  Shader.h  ShaderType.h  Texture2D.h  TextureCubeMap.h  Uniform.h  UniformBlockDescriptor.h  UniformDescriptor.h  UniformType.h  VertexArrayObject.h  VertexAttributePointer.h  VertexBufferObject.h  VertexFragmentShader.h  Viewport.h
include/input/: Input.h  Keyboard.h  KeyboardEnum.h  KeyboardEvent.h  Mouse.h  MouseEnum.h  MouseEvent.h  Window.h
include/log/: Log.h
include/math/: Common.h  Math.h  Transform.h
include/net/: Client.h  DeliveryType.h  Message.h  Packet.h  Server.h
include/protocol/: Command.h
include/render/: Material.h  Mesh.h  Node.h  RenderCommand.h  Renderer.h  Technique.h  Transform.h
include/sdl/: SDL2Keyboard.h  SDL2Mouse.h  SDL2Window.h
include/serial/: Serialization.h  StreamBuffer.h
include/time/: Time.h
include/window/: Window.h
resources/shaders/: flat.frag  flat.vert  phong.frag  phong.vert  terrain.frag  terrain.vert
src/: Common.cpp  Log.cpp  client.cpp  server.cpp
src/enet/: ENetClient.cpp  ENetServer.cpp
src/game/: Camera.cpp  Environment.cpp  Frame.cpp  Idle.cpp  Image.cpp  MoveDirection.cpp  MoveTo.cpp  Player.cpp  State.cpp  StateMachine.cpp  StateType.cpp  Terrain.cpp
src/geometry/: Cube.cpp  Geometry.cpp  Intersection.cpp  Octree.cpp  Sphere.cpp  Triangle.cpp
src/gl/: ElementArrayBufferObject.cpp  GLInfo.cpp  Shader.cpp  Texture2D.cpp  TextureCubeMap.cpp  Uniform.cpp  UniformBlockDescriptor.cpp  UniformDescriptor.cpp  VertexArrayObject.cpp  VertexAttributePointer.cpp  VertexBufferObject.cpp  VertexFragmentShader.cpp  Viewport.cpp
src/input/: Input.cpp  Keyboard.cpp  KeyboardEvent.cpp  Mouse.cpp  MouseEvent.cpp  Window.cpp
src/log/: Log.cpp
src/math/: Common.cpp  Math.cpp  Transform.cpp
src/net/: Client.cpp  Message.cpp  Packet.cpp  Server.cpp
src/render/: Animation.cpp  Material.cpp  Mesh.cpp  Node.cpp  RenderCommand.cpp  Renderer.cpp  Skin.cpp  Technique.cpp  Transform.cpp
src/sdl/: SDL2Keyboard.cpp  SDL2Mouse.cpp  SDL2Window.cpp
src/serial/: Serialization.cpp  StreamBuffer.cpp
src/time/: Time.cpp
src/window/: Window.cpp
